--- a/Styles.css
+++ b/Styles.css
@@ -26,3 +26,24 @@ body{
     border-radius: 10px;
     padding: 30px 40px;
 }
+
+
+/* Estilos para la tabla */
+.tabla {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.tabla th, .tabla td {
+    border: 1px solid #dddddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.tabla th {
+    background-color: #2f6e6b;
+}
+
+
+
+
